5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1662_2971.log
== SUBMITION (2019-04-15 15:03:59) 
-- CODE:
=input(Qf = Q0*(1 + j)**t)
-- EXECUTION TIME:
0.277618
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    =input(Qf = Q0*(1 + j)**t)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:00) 
-- CODE:
=input(Qf = Q0*(1 + j)**t)
-- ERROR:
File "XXXX", line 1
    =input(Qf = Q0*(1 + j)**t)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:04:47) 
-- CODE:
=input(Qf = 1.500*(1 + j)**36)
-- EXECUTION TIME:
0.135539
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    =input(Qf = 1.500*(1 + j)**36)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:47) 
-- CODE:
=input(Qf = 1.500*(1 + j)**36)
-- ERROR:
File "XXXX", line 1
    =input(Qf = 1.500*(1 + j)**36)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:05:07) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- EXECUTION TIME:
0.147211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2971/main.py", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:08) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:05:10) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- EXECUTION TIME:
0.141346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2971/main.py", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:10) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:05:10) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- EXECUTION TIME:
0.103887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2971/main.py", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:11) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:11) 
-- CODE:
print(Qf = 1.500*(1 + j)**36)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Qf = 1.500*(1 + j)**36)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:06:48) 
-- CODE:
print(Qf = 1.500*(1 + )**36)
-- EXECUTION TIME:
0.181869
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    print(Qf = 1.500*(1 + )**36)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:07) 
-- CODE:
print(Qf = 1.500*)**36
-- EXECUTION TIME:
0.140235
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    print(Qf = 1.500*)**36
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:07) 
-- CODE:
print(Qf = 1.500*)**36
-- ERROR:
File "XXXX", line 1
    print(Qf = 1.500*)**36
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:49) 
-- CODE:
print(1.500*36)
-- EXECUTION TIME:
0.174303
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
54.0
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
54.0
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
54.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:49) 
-- CODE:
print(1.500*36)
-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:39) 
-- CODE:
print(1.500*36)
-- EXECUTION TIME:
0.148484
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
54.0
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
54.0
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
54.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:39) 
-- CODE:
print(1.500*36)
-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:14:15) 
-- CODE:
print(1.500*(1+54)**36)
-- EXECUTION TIME:
0.203567
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
6.747580598938804e+62
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
6.747580598938804e+62
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
6.747580598938804e+62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:16) 
-- CODE:
print(1.500*(1+54)**36)
-- OUTPUT:
6.747580598938804e+62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:14:38) 
-- CODE:
print=(1.500*(1+54)**36)
-- EXECUTION TIME:
0.216516
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:

-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:

-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:38) 
-- CODE:
print=(1.500*(1+54)**36)
-- OUTPUT:
6.747580598938804e+62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:39) 
-- CODE:
print=(1.500*(1+54)**36)
-- OUTPUT:
6.747580598938804e+62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:15:45) 
-- CODE:
print=(1.500*(1+54)**36)
print("valor do final"")
		
-- EXECUTION TIME:
0.169963
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 2
    print("valor do final"")
                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:15:45) 
-- CODE:
print=(1.500*(1+54)**36)
print("valor do final"")
		
-- EXECUTION TIME:
0.201292
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 2
    print("valor do final"")
                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:03) 
-- CODE:
valor inicial=1.500
print=(1.500*(1+54)**36)
print("valor do final"")

-- EXECUTION TIME:
0.156194
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:04) 
-- CODE:
valor inicial=1.500
print=(1.500*(1+54)**36)
print("valor do final"")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:55) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento")
print=(1.500*(1+54)**36)
print("valor do final"")

-- EXECUTION TIME:
0.218424
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:56) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento")
print=(1.500*(1+54)**36)
print("valor do final"")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:04) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento"")
print=(1.500*(1+54)**36)
print("valor do final"")

-- EXECUTION TIME:
0.126082
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:04) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento"")
print=(1.500*(1+54)**36)
print("valor do final"")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:19) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final"")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:20) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final"")

-- EXECUTION TIME:
0.174777
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:21) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final"")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:13) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- EXECUTION TIME:
0.213575
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:14) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:14) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:15) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:15) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:15) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:16) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:16) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- EXECUTION TIME:
0.150397
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:17) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:17) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- EXECUTION TIME:
0.158131
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:17) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+j)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:27) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")

-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:27) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")

-- EXECUTION TIME:
0.168514
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:40) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")
round(9,9)
-- EXECUTION TIME:
0.175774
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:40) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")
round(9,9)
-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:41) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")
round(9,9)
-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:41) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")
round(9,9)
-- ERROR:
File "XXXX", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:42) 
-- CODE:
valor inicial=1.500
meses= 36
input("valor do apartamento" "")
print=(1.500*(1+54)**36)
print("valor do final" "")
round(9,9)
-- EXECUTION TIME:
0.172572
-- ERROR:
  File "/home/codebench/codes/1662/2971/main.py", line 1
    valor inicial=1.500
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
